<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main2Activity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="top"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/google"
            android:textColor="#8211B3"
            android:background="#FFFF"

            />
        <Button
            android:id="@+id/button1"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/youtube"
            android:textColor="#8211B3"
            android:background="#FFFF"
            />
        <Button
            android:id="@+id/button2"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            android:textColor="#8211B3"
            android:background="#FFFF"
            />
        <Button
            android:id="@+id/button3"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/twiteet"
            android:textColor="#8211B3"
            android:background="#FFFF"

            />

    </LinearLayout>


    <ImageButton
        android:id="@+id/Ibutton"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/logo"
        android:background="#FFFF"
        />
    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/go"
        android:background="#D46CE6"
        android:textColor="#FFFF"
        android:textSize="20sp"
        android:textStyle="bold"

        />
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        />


</LinearLayout>